--- a/index.html
+++ b/index.html
@@ -107,8 +107,15 @@
 
     .poster {
       width: 100%;
+      height: auto;
+      max-width: 100%;
+      display: block;
+
       border-radius: 12px;
       margin-bottom: 12px;
+
+      image-rendering: auto;
+      -webkit-transform: translateZ(0);
     }
 
     .error {
