--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Rumble Fight Club</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
   <style>
@@ -18,11 +17,11 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       background: #0f0f0f;
-      color: #ffffff;
+      color: #fff;
       min-height: 100vh;
+      overflow-x: hidden;
     }
 
-    /* HEADER */
     header {
       position: absolute;
       top: 16px;
@@ -30,7 +29,6 @@
       font-weight: 800;
       font-size: 14px;
       letter-spacing: 1px;
-      line-height: 1.1;
     }
 
     .nickname {
@@ -38,10 +36,9 @@
       top: 16px;
       right: 16px;
       font-size: 13px;
-      opacity: 0.9;
+      opacity: 0.85;
     }
 
-    /* APP CONTAINER */
     #app {
       min-height: 100vh;
       display: flex;
@@ -50,41 +47,39 @@
       padding: 16px;
     }
 
-    /* CARD */
     .card {
       background: #1a1a1a;
       border: 1px solid #2a2a2a;
       border-radius: 16px;
-      padding: 24px;
+      padding: 20px;
       width: 100%;
       max-width: 320px;
       text-align: center;
     }
 
-    .card h3 {
-      margin-bottom: 12px;
-    }
-
-    /* INPUT */
-    input {
+    .poster {
       width: 100%;
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      outline: none;
+      border-radius: 12px;
       margin-bottom: 12px;
-      font-size: 16px;
     }
 
-    /* BUTTON */
+    .card h3 {
+      margin-bottom: 6px;
+    }
+
+    .card p {
+      opacity: 0.8;
+      margin-bottom: 16px;
+    }
+
     button {
       width: 100%;
-      padding: 12px;
-      border-radius: 10px;
+      padding: 14px;
+      border-radius: 12px;
       border: none;
       background: #e53935;
       color: #fff;
-      font-size: 16px;
+      font-size: 15px;
       font-weight: 700;
       cursor: pointer;
     }
@@ -93,51 +88,53 @@
       transform: scale(0.97);
     }
 
-    /* TOURNAMENT */
-    .tournament span {
+    /* BOTTOM CARD */
+    .bottom-sheet {
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: -100%;
+      background: #141414;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      padding: 16px;
+      transition: bottom 0.3s ease;
+      max-height: 80vh;
+      overflow-y: auto;
+      border-top: 1px solid #2a2a2a;
+    }
+
+    .bottom-sheet.show {
+      bottom: 0;
+    }
+
+    .fight {
+      padding: 12px;
+      border-bottom: 1px solid #222;
+      font-size: 14px;
+    }
+
+    .fight:last-child {
+      border-bottom: none;
+    }
+
+    .fight span {
       display: block;
       font-size: 12px;
       opacity: 0.6;
-      margin-bottom: 8px;
-    }
-
-    .tournament h3 {
-      margin-bottom: 6px;
-    }
-
-    .poster {
-      width: 100%;
-      height: auto;
-      max-width: 100%;
-      display: block;
-
-      border-radius: 12px;
-      margin-bottom: 12px;
-
-      image-rendering: auto;
-      -webkit-transform: translateZ(0);
-    }
-
-    .error {
-      color: #ff6b6b;
-      font-size: 13px;
-      margin-top: 8px;
     }
   </style>
 </head>
 
 <body>
 
-  <header>
-    RUMBLE<br>FIGHT CLUB
-  </header>
+<header>RUMBLE<br>FIGHT CLUB</header>
+<div class="nickname" id="nickname"></div>
 
-  <div class="nickname" id="nickname"></div>
+<div id="app"></div>
 
-  <div id="app"></div>
+<div class="bottom-sheet" id="fightCard"></div>
 
-  <!-- MAIN LOGIC -->
-  <script src="app.js"></script>
-
+<script src="app.js"></script>
 </body>
 </html>
