--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       padding: 14px;
       border-radius: 12px;
       border: none;
-      background: #e53935;
+      background: #2a2a2a;
       color: #fff;
       font-size: 15px;
       font-weight: 700;
@@ -88,7 +88,10 @@
       transform: scale(0.97);
     }
 
-    /* BOTTOM CARD */
+    /* ───────────────
+       BOTTOM SHEET
+    ─────────────── */
+
     .bottom-sheet {
       position: fixed;
       left: 0;
@@ -99,9 +102,10 @@
       border-top-right-radius: 20px;
       padding: 16px;
       transition: bottom 0.3s ease;
-      max-height: 80vh;
+      max-height: 85vh;
       overflow-y: auto;
       border-top: 1px solid #2a2a2a;
+      z-index: 10;
     }
 
     .bottom-sheet.show {
@@ -109,7 +113,7 @@
     }
 
     .fight {
-      padding: 12px;
+      padding: 12px 0;
       border-bottom: 1px solid #222;
       font-size: 14px;
     }
@@ -118,10 +122,45 @@
       border-bottom: none;
     }
 
-    .fight span {
-      display: block;
+    .fight-title {
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .weight {
       font-size: 12px;
       opacity: 0.6;
+      margin-bottom: 8px;
+    }
+
+    .row {
+      display: flex;
+      gap: 8px;
+      margin-bottom: 8px;
+    }
+
+    .pick,
+    .method {
+      flex: 1;
+      padding: 8px;
+      border-radius: 10px;
+      background: #1f1f1f;
+      border: 1px solid #2a2a2a;
+      text-align: center;
+      font-size: 13px;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .pick.active,
+    .method.active {
+      background: #3a3a3a;
+      border-color: #555;
+    }
+
+    #savePredictions {
+      margin-top: 16px;
+      background: #2f2f2f;
     }
   </style>
 </head>
