--- a/index.html
+++ b/index.html
@@ -2,43 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Rumble Fight Club</title>
+  <title>RUMBLE FIGHT CLUB</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
   <style>
+    /* RESET */
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
 
+    /* GLOBAL */
     body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       background: #0f0f0f;
       color: #fff;
       min-height: 100vh;
       overflow-x: hidden;
+      text-transform: uppercase;
     }
 
+    /* HEADER */
     header {
       position: absolute;
       top: 16px;
       left: 16px;
       font-weight: 800;
       font-size: 14px;
-      letter-spacing: 1px;
+      letter-spacing: 1.2px;
+      line-height: 1.2;
     }
 
+    /* TOP RIGHT MENU */
     .nickname {
       position: absolute;
       top: 16px;
       right: 16px;
-      font-size: 13px;
-      opacity: 0.85;
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      font-size: 11px;
+      font-weight: 700;
+      letter-spacing: 1px;
+      white-space: nowrap;
     }
 
+    .nickname span {
+      opacity: 0.6;
+    }
+
+    #myPicksBtn {
+      opacity: 1;
+      padding: 6px 10px;
+      border-radius: 8px;
+      background: #222;
+      cursor: pointer;
+    }
+
+    /* APP */
     #app {
       min-height: 100vh;
       display: flex;
@@ -47,6 +71,7 @@
       padding: 16px;
     }
 
+    /* CARD */
     .card {
       background: #1a1a1a;
       border: 1px solid #2a2a2a;
@@ -65,13 +90,16 @@
 
     .card h3 {
       margin-bottom: 6px;
+      letter-spacing: 1.2px;
     }
 
     .card p {
       opacity: 0.8;
       margin-bottom: 16px;
+      letter-spacing: 0.8px;
     }
 
+    /* BUTTONS */
     button {
       width: 100%;
       padding: 14px;
@@ -79,19 +107,22 @@
       border: none;
       background: #2a2a2a;
       color: #fff;
-      font-size: 15px;
+      font-size: 14px;
       font-weight: 700;
+      letter-spacing: 1.2px;
       cursor: pointer;
+    }
+
+    button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
 
     button:active {
       transform: scale(0.97);
     }
 
-    /* ───────────────
-       BOTTOM SHEET
-    ─────────────── */
-
+    /* BOTTOM SHEET */
     .bottom-sheet {
       position: fixed;
       left: 0;
@@ -112,10 +143,11 @@
       bottom: 0;
     }
 
+    /* FIGHT */
     .fight {
       padding: 12px 0;
       border-bottom: 1px solid #222;
-      font-size: 14px;
+      font-size: 13px;
     }
 
     .fight:last-child {
@@ -123,12 +155,12 @@
     }
 
     .fight-title {
-      font-weight: 600;
+      font-weight: 700;
       margin-bottom: 4px;
     }
 
     .weight {
-      font-size: 12px;
+      font-size: 11px;
       opacity: 0.6;
       margin-bottom: 8px;
     }
@@ -147,28 +179,46 @@
       background: #1f1f1f;
       border: 1px solid #2a2a2a;
       text-align: center;
-      font-size: 13px;
+      font-size: 12px;
       cursor: pointer;
       user-select: none;
+      opacity: 0.6;
     }
 
     .pick.active,
     .method.active {
       background: #3a3a3a;
       border-color: #555;
+      opacity: 1;
     }
 
     #savePredictions {
       margin-top: 16px;
       background: #2f2f2f;
     }
+
+    /* MOBILE SAFETY */
+    @media (max-width: 360px) {
+      .nickname {
+        gap: 8px;
+        font-size: 10px;
+      }
+    }
   </style>
 </head>
 
 <body>
 
-<header>RUMBLE<br>FIGHT CLUB</header>
-<div class="nickname" id="nickname"></div>
+<header>
+  RUMBLE<br>
+  FIGHT CLUB
+</header>
+
+<div class="nickname" id="nickname">
+  <span>LEADERBOARD</span>
+  <span>QUIZ</span>
+  <span id="myPicksBtn">MY PICKS</span>
+</div>
 
 <div id="app"></div>
 
