--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
       opacity: 0.6;
     }
 
+    .nickname {
+      position: absolute;
+      top: 0;
+      right: 0;
+      font-size: 12px;
+      opacity: 0.8;
+    }
+
     /* ───────────────
        APP
     ─────────────── */
@@ -205,6 +213,9 @@
     <div class="nav-btn">QUIZ</div>
     <div class="nav-btn" id="myPicksBtn">MY PICKS</div>
   </div>
+
+  <!-- КРИТИЧЕСКИ ВАЖНО ДЛЯ app.js -->
+  <div class="nickname" id="nickname"></div>
 </header>
 
 <div id="app"></div>
