--- a/index.html
+++ b/index.html
@@ -3,17 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Rumble Fight Club</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; -webkit-tap-highlight-color: transparent; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       background: #0f0f0f;
@@ -21,11 +14,6 @@
       min-height: 100vh;
       overflow-x: hidden;
     }
-
-    /* ───────────────
-       HEADER
-    ─────────────── */
-
     header {
       position: absolute;
       top: 16px;
@@ -36,53 +24,12 @@
       align-items: flex-start;
       z-index: 20;
     }
+    .logo { font-weight: 800; font-size: 14px; letter-spacing: 1px; line-height: 1.2; }
+    .nav { display: flex; gap: 14px; align-items: center; }
+    .nav-btn { font-weight: 800; font-size: 12px; letter-spacing: 1px; cursor: pointer; opacity: 0.9; }
+    .nickname { position: absolute; top: 0; right: 0; font-size: 12px; opacity: 0.8; }
 
-    .logo {
-      font-weight: 800;
-      font-size: 14px;
-      letter-spacing: 1px;
-      line-height: 1.2;
-    }
-
-    .nav {
-      display: flex;
-      gap: 14px;
-      align-items: center;
-    }
-
-    .nav-btn {
-      font-weight: 800;
-      font-size: 12px;
-      letter-spacing: 1px;
-      cursor: pointer;
-      opacity: 0.9;
-      user-select: none;
-    }
-
-    .nav-btn:active {
-      opacity: 0.6;
-    }
-
-    .nickname {
-      position: absolute;
-      top: 0;
-      right: 0;
-      font-size: 12px;
-      opacity: 0.8;
-    }
-
-    /* ───────────────
-       APP
-    ─────────────── */
-
-    #app {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 16px;
-    }
-
+    #app { min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 16px; }
     .card {
       background: #1a1a1a;
       border: 1px solid #2a2a2a;
@@ -92,134 +39,42 @@
       max-width: 320px;
       text-align: center;
     }
-
-    .poster {
-      width: 100%;
-      border-radius: 12px;
-      margin-bottom: 12px;
-    }
-
-    .card h3 {
-      margin-bottom: 6px;
-    }
-
-    .card p {
-      opacity: 0.8;
-      margin-bottom: 16px;
-    }
+    .poster { width: 100%; border-radius: 12px; margin-bottom: 12px; }
 
     button {
-      width: 100%;
-      padding: 14px;
-      border-radius: 12px;
-      border: none;
-      background: #2a2a2a;
-      color: #fff;
-      font-size: 15px;
-      font-weight: 700;
-      cursor: pointer;
+      width: 100%; padding: 14px; border-radius: 12px; border: none;
+      background: #2a2a2a; color: #fff; font-size: 15px; font-weight: 700; cursor: pointer;
     }
-
-    button:active {
-      transform: scale(0.97);
-    }
-
-    /* ───────────────
-       BOTTOM SHEET
-    ─────────────── */
+    button:disabled { opacity: 0.5; cursor: not-allowed; }
 
     .bottom-sheet {
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: -100%;
-      background: #141414;
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-      padding: 16px;
-      transition: bottom 0.3s ease;
-      max-height: 85vh;
-      overflow-y: auto;
-      border-top: 1px solid #2a2a2a;
-      z-index: 10;
+      position: fixed; left: 0; right: 0; bottom: -100%;
+      background: #141414; border-top: 1px solid #2a2a2a;
+      border-radius: 20px 20px 0 0; padding: 16px;
+      transition: bottom 0.3s ease; max-height: 85vh; overflow-y: auto; z-index: 100;
     }
+    .bottom-sheet.show { bottom: 0; }
 
-    .bottom-sheet.show {
-      bottom: 0;
-    }
+    .sheet-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px; }
+    .close-x { font-size: 24px; cursor: pointer; padding: 4px; }
 
-    .fight {
-      padding: 12px 0;
-      border-bottom: 1px solid #222;
-      font-size: 14px;
-    }
-
-    .fight:last-child {
-      border-bottom: none;
-    }
-
-    .fight-title {
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-
-    .weight {
-      font-size: 12px;
-      opacity: 0.6;
-      margin-bottom: 8px;
-    }
-
-    .row {
-      display: flex;
-      gap: 8px;
-      margin-bottom: 8px;
-    }
-
-    .pick,
-    .method {
-      flex: 1;
-      padding: 8px;
-      border-radius: 10px;
-      background: #1f1f1f;
-      border: 1px solid #2a2a2a;
-      text-align: center;
-      font-size: 13px;
-      cursor: pointer;
-      user-select: none;
-    }
-
-    .pick.active,
-    .method.active {
-      background: #3a3a3a;
-      border-color: #555;
-    }
-
-    #savePredictions {
-      margin-top: 16px;
-      background: #2f2f2f;
-    }
+    .fight { padding: 12px 0; border-bottom: 1px solid #222; font-size: 14px; }
+    .coming-soon { text-align: center; padding: 40px 0; opacity: 0.5; font-weight: 700; letter-spacing: 1px; }
   </style>
 </head>
-
 <body>
 
 <header>
-  <div class="logo">
-    RUMBLE<br>FIGHT CLUB
-  </div>
-
+  <div class="logo">RUMBLE<br>FIGHT CLUB</div>
   <div class="nav">
-    <div class="nav-btn">LEADERBOARD</div>
-    <div class="nav-btn">QUIZ</div>
+    <div class="nav-btn" id="leaderboardBtn">LEADERBOARD</div>
+    <div class="nav-btn" id="quizBtn">QUIZ</div>
     <div class="nav-btn" id="myPicksBtn">MY PICKS</div>
   </div>
-
-  <!-- КРИТИЧЕСКИ ВАЖНО ДЛЯ app.js -->
   <div class="nickname" id="nickname"></div>
 </header>
 
 <div id="app"></div>
-
 <div class="bottom-sheet" id="fightCard"></div>
 
 <script src="app.js"></script>
