--- a/index.html
+++ b/index.html
@@ -5,77 +5,89 @@
   <title>Rumble Fight Club</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; -webkit-tap-highlight-color: transparent; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #0f0f0f;
-      color: #fff;
-      min-height: 100vh;
-      overflow-x: hidden;
+      background: #0f0f0f; color: #fff; min-height: 100vh; overflow-x: hidden;
     }
+
+    /* ── HEADER ── */
     header {
-      position: absolute;
-      top: 16px;
-      left: 16px;
-      right: 16px;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      z-index: 20;
+      position: absolute; top: 16px; left: 16px; right: 16px;
+      display: flex; justify-content: space-between; align-items: center; z-index: 20;
     }
-    .logo { font-weight: 800; font-size: 14px; letter-spacing: 1px; line-height: 1.2; }
-    .nav { display: flex; gap: 14px; align-items: center; }
-    .nav-btn { font-weight: 800; font-size: 12px; letter-spacing: 1px; cursor: pointer; opacity: 0.9; }
-    .nickname { position: absolute; top: 0; right: 0; font-size: 12px; opacity: 0.8; }
+    .logo { font-weight: 800; font-size: 13px; letter-spacing: 1px; line-height: 1.2; }
+    .nav-right { display: flex; gap: 15px; align-items: center; }
+    .nav-link { font-weight: 800; font-size: 11px; letter-spacing: 0.5px; cursor: pointer; opacity: 0.8; text-transform: uppercase; }
 
-    #app { min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 16px; }
-    .card {
-      background: #1a1a1a;
-      border: 1px solid #2a2a2a;
-      border-radius: 16px;
-      padding: 20px;
-      width: 100%;
-      max-width: 320px;
-      text-align: center;
+    /* ГАМБУРГЕР */
+    .menu-toggle {
+      width: 24px; height: 18px; display: flex; flex-direction: column; justify-content: space-between; cursor: pointer;
     }
-    .poster { width: 100%; border-radius: 12px; margin-bottom: 12px; }
+    .menu-toggle span { display: block; width: 100%; height: 2px; background: #fff; border-radius: 2px; }
 
-    button {
-      width: 100%; padding: 14px; border-radius: 12px; border: none;
-      background: #2a2a2a; color: #fff; font-size: 15px; font-weight: 700; cursor: pointer;
+    /* ── SIDE MENU (БОКОВОЕ) ── */
+    #sideMenu {
+      position: fixed; top: 0; right: -280px; width: 280px; height: 100%;
+      background: #141414; z-index: 1000; transition: 0.3s ease;
+      border-left: 1px solid #2a2a2a; padding: 24px;
     }
-    button:disabled { opacity: 0.5; cursor: not-allowed; }
+    #sideMenu.open { right: 0; }
+    .menu-user { font-size: 18px; font-weight: 800; margin-bottom: 30px; color: #fff; border-bottom: 1px solid #2a2a2a; padding-bottom: 15px; }
+    .menu-item { padding: 15px 0; font-size: 14px; font-weight: 700; text-transform: uppercase; cursor: pointer; border-bottom: 1px solid #1f1f1f; display: flex; align-items: center; gap: 10px; }
+    .overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); display: none; z-index: 900; }
 
+    /* ── BOTTOM SHEET (СНИЗУ) ── */
     .bottom-sheet {
       position: fixed; left: 0; right: 0; bottom: -100%;
-      background: #141414; border-top: 1px solid #2a2a2a;
-      border-radius: 20px 20px 0 0; padding: 16px;
-      transition: bottom 0.3s ease; max-height: 85vh; overflow-y: auto; z-index: 100;
+      background: #141414; border-top: 1px solid #2a2a2a; border-radius: 20px 20px 0 0;
+      padding: 16px; transition: bottom 0.3s ease; max-height: 85vh; overflow-y: auto; z-index: 500;
     }
     .bottom-sheet.show { bottom: 0; }
+    .sheet-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+    .close-x { font-size: 24px; cursor: pointer; }
 
-    .sheet-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px; }
-    .close-x { font-size: 24px; cursor: pointer; padding: 4px; }
+    /* ── ИКОНКИ HOW TO PLAY ── */
+    .htp-row { display: flex; gap: 15px; margin-bottom: 20px; align-items: flex-start; }
+    .htp-icon { font-size: 24px; min-width: 30px; text-align: center; }
+    .htp-text strong { display: block; font-size: 15px; margin-bottom: 2px; }
+    .htp-text p { font-size: 13px; color: #aaa; line-height: 1.4; }
 
-    .fight { padding: 12px 0; border-bottom: 1px solid #222; font-size: 14px; }
-    .coming-soon { text-align: center; padding: 40px 0; opacity: 0.5; font-weight: 700; letter-spacing: 1px; }
+    /* ── MAIN CARD ── */
+    #app { min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 16px; }
+    .card { background: #1a1a1a; border: 1px solid #2a2a2a; border-radius: 16px; padding: 20px; width: 100%; max-width: 320px; text-align: center; }
+    .poster { width: 100%; border-radius: 12px; margin-bottom: 12px; }
+    button { width: 100%; padding: 14px; border-radius: 12px; border: none; background: #2a2a2a; color: #fff; font-size: 15px; font-weight: 700; cursor: pointer; }
+    .fight { padding: 12px 0; border-bottom: 1px solid #222; }
   </style>
 </head>
 <body>
 
 <header>
   <div class="logo">RUMBLE<br>FIGHT CLUB</div>
-  <div class="nav">
-    <div class="nav-btn" id="leaderboardBtn">LEADERBOARD</div>
-    <div class="nav-btn" id="quizBtn">QUIZ</div>
-    <div class="nav-btn" id="myPicksBtn">MY PICKS</div>
+  <div class="nav-right">
+    <div class="nav-link" id="btnHTP">How to play</div>
+    <div class="nav-link" id="btnLB">Leaderboard</div>
+    <div class="menu-toggle" id="btnMenu">
+      <span></span><span></span><span></span>
+    </div>
   </div>
-  <div class="nickname" id="nickname"></div>
 </header>
 
 <div id="app"></div>
-<div class="bottom-sheet" id="fightCard"></div>
+
+<div class="overlay" id="overlay"></div>
+<div id="sideMenu">
+  <div class="menu-user" id="menuUser">USER</div>
+  <div class="menu-item" onclick="comingSoon('Profile')">👤 PROFILE</div>
+  <div class="menu-item" id="menuMyPicks">📝 MY PICKS</div>
+  <div class="menu-item" onclick="comingSoon('Quiz')">🧠 QUIZ</div>
+  <div class="menu-item" onclick="comingSoon('Invite Friends')">✉️ INVITE FRIENDS</div>
+</div>
+
+<div class="bottom-sheet" id="sheet"></div>
 
 <script src="app.js"></script>
 </body>
